--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,24 @@
 				<version>2.12.4</version>
 			</dependency>
 			<dependency>
-		    		<groupId>com.google.code.gson</groupId>
-		    		<artifactId>gson</artifactId>
-		    		<version>2.3</version>
+		    	<groupId>com.google.code.gson</groupId>
+		    	<artifactId>gson</artifactId>
+		    	<version>2.3</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>1.7.7</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-core</artifactId>
+				<version>1.1.3</version>
+			</dependency>
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>1.1.3</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
