--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>hipstapic-domain</module>
         <module>hipstapic-service</module>
+        <module>hipstapic-web</module>
     </modules>
 
     <dependencyManagement>
