Moved cli functionality to a separate project.
Added import and load by a directory and now read the file's EXIF to obtain hipstamatic lens, film and flash information instead of expecting the user to do this by hand.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>hipstapic-service</module>
         <module>hipstapic-web</module>
+        <module>hipstapic-cli</module>
     </modules>
 
     <dependencyManagement>
