--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                 <version>2.12.4</version>
             </dependency>
             <dependency>
+                <groupId>org.mongodb.morphia</groupId>
+                <artifactId>morphia</artifactId>
+                <version>0.111</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.3</version>
